[tool.poetry]
name = "laskin"
version = "0.3.0"
description = ""
authors = ["Vsevolod Bazhan <vsevozhan@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
isort = "^5.4.2"
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
